- LFBuild2DLPF, LFBuild4DLPF for frequency-domain lowpass filters, optionally anisotropic
- Smarter search for of white image and calibration databases decoding and rectifying; More informative error messages when locating white databases / files

---v0.5.1----------------------------------------------------------------------
Minor bug fixes and improvements

- LFWriteMetadata now supports writing of simple class objects
- LFGatherCamInfo uses unit_info.json on Lytro cameras that have it, fixes serial number mismatch for these cameras

---v0.5------------------------------------------------------------------------
Mostly reverse-compatible. White images and calibrations should be re-processed. See LFToolbox.pdf for details.

New Features :
- Linear refocus super-resolution via LFFiltShiftSum parameter UpsampRate, see LFDemoRefocusSuperres
- New display functions LFDispLawnmower, LFDispTiles, LFDispTilesSubfigs, LFDispProj, LFDispProjSubfigs
- LFReadESLF, LFWriteESLF: Read / write ESLF files
- LFDispMousePan verbose mode, InitialViewIdx parameter
- LFConvertToInt
- LFDisp: optional renormalize, weight channel output
- Contents.m: lists functions by category, type "help <LFToolbox folder name>"
- Updated sample pack v0.5, to match new decode; added ESLF example

Interface changes:
- LFDispVidCirc: parameters changed to allow finer control over animation

Bug Fixes :
- Calibration: correction to radial distortion model polynomial highest term; calibrations should be re-processed
- LFFilt2DFFT, LFFilt4DFFT: better handling of monochrome images; more consistent/optional clamping of output
- LFCalInit: handle more cases of checkerboard point order
- LFMatlabPathSetup.m: compatible with deployed code

Performance and behaviour changes :
- Decoding: improved alignment with rotated lenslet grids, impacts decoding and calibration; white should be re-processed
- Decoding Lytro images is up to 2x faster, excluding saving to disk