@@ -2,16 +2,19 @@
 % 
 % Usage: 
 %   LF = LFReadESLF( FName )
-%   LF = LFReadESLF( FName, [LensletSize_pix], [LoadAlpha], [<imread options>] )
+%   [LF, Metadata] = LFReadESLF( FName, [LensletSize_pix], [LoadAlpha], [<imread options>] )
 %
-% This function reads the ESLF files commonly used to store light fields, e.g. those at
-% lightfields.stanford.edu.
+% This function reads the ESLF files commonly used to store light fields. If an accompanying .json
+% file is present, the metadata is also read from that file. json files must be named <FName>.json,
+% including all extensions, e.g. "MyImage.eslf.png.json", following the same convention as the
+% decode process.
 % 
 % Inputs:
 %   FName: path to input file
 % 
 % Optional Inputs:
-%   LensletSize_pix: number of pixels per lenslet, default 14
+%   LensletSize_pix: number of pixels per lenslet, default 14 unless the field DecodeOptions.LFSize
+%   is present in an accompanying metadata file, in which case the light field size recorded in that file gets used as the default.
 %  
 %   LoadAlpha: default true; if true, aattempts to load an alpha channel from the ESLF and use as
 %             a weight channel for the LF; useful for indicating empty subaperture images; use in
@@ -22,18 +25,33 @@
 % Outputs:
 %   LF: a 4D light field with index order [t,s,v,u,c], where s,t are horizontal and vertical
 %   subaperture index; u,v are horizontal and vertical pixel index; and c is colour channel.
+% 
+%   Metadata: contents of the accompanying .json file, if present.
 %
 % User guide: <a href="matlab:which LFToolbox.pdf; open('LFToolbox.pdf')">LFToolbox.pdf</a>
 % See also: LFWriteESLF, LFReadGantryArray, LFUtilDecodeLytroFolder
 
 % Copyright (c) 2013-2020 Donald G. Dansereau
 
-function LF = LFReadESLF( FName, LensletSize_pix, LoadAlpha, varargin )
+function [LF, Metadata] = LFReadESLF( FName, LensletSize_pix, LoadAlpha, varargin )
 
-LensletSize_pix = LFDefaultVal('LensletSize_pix', [14,14]);
+Metadata = [];
+
+LensletSize_default = [14,14];
 LoadAlpha = LFDefaultVal('LoadAlpha', true);
 NChans = 3;
 
+% Check if an accompanying metadata .json file exists, and load it
+MetadataFname = [FName, '.json'];
+if( exist( MetadataFname, 'file' ) == 2 )  % exist returns 2 if a matching file is found
+	Metadata = LFReadMetadata( MetadataFname );
+	if( isfield( Metadata, 'DecodeOptions' ) && isfield( Metadata.DecodeOptions, 'LFSize' ) )
+		LensletSize_default = Metadata.DecodeOptions.LFSize(1:2);
+	end
+end
+LensletSize_pix = LFDefaultVal('LensletSize_pix', LensletSize_default);
+
+%---
 if( LoadAlpha )
 	[Img,ColorMap, Alpha] = imread( FName, varargin{:} ); % note: requesting Alpha sets bg to black
 	if( ~isempty(Alpha) )
